@@ -20,6 +20,7 @@
 #undef HAVE_TIMEZONE
 #undef HAVE_TM_GMTOFF
 #undef MONO_SIZEOF_SUNPATH
+#undef MONO_ZERO_ARRAY_LENGTH
 #undef NEED_LINK_UNLINK
 #undef PTHREAD_POINTER_ID
 #undef HAVE_GC_H
