@@ -1,0 +1,5 @@
+<configuration>
+	<dllmap dll="cygwin1.dll" target="@LIBC@" />
+	<dllmap dll="libc" target="@LIBC@" />
+</configuration>
+
